apps/causal-modeling/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: causal-modeling-backend
 namespace: causal-modeling
 labels:
    app: causal-modeling-backend
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: causal-modeling-backend
  template:
    metadata:
      labels:
        app: causal-modeling-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
<<<<<<< HEAD:apps/causal-modeling/deployment-backend.yaml
      - name: causal-modeling-backend
        image: ghcr.io/curatimexai/causal-modeling-backend:4a37a5e17e02e02aebe5064caa8fa85d3af709d0
=======
      - name: causal-modeling
        image: ghcr.io/curatimexai/causal-modeling:10590fe994aba22a53950a9dc3de568747902537
>>>>>>> b3a87666c4eaa46cb1d5ddb7774e4ebc997cbee7:apps/causal-modeling/deployment.yaml
        ports:
        - containerPort: 3000
        startupProbe:
          tcpSocket:
            port: 3000
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 10
