apps/causal-modeling/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: causal-modeling
 namespace: causal-modeling
 labels:
    app: causal-modeling
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: causal-modeling
  template:
    metadata:
      labels:
        app: causal-modeling
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: causal-modeling
        image: ghcr.io/curatimexai/causal-modeling:c7896307edafe6580913312ef16d38db690e2f8b
        ports:
        - containerPort: 3000
        startupProbe:
          tcpSocket:
            port: 3000
          failureThreshold: 30
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 40
          periodSeconds: 10
