apps/causal-modeling/service-backend.yaml
apiVersion: v1
kind: Service
metadata: 
  name: causal-modeling-service-backend
  namespace: causal-modeling
spec:
  selector:
    app: causal-modeling-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
