apps/causal-modeling/service-frontend.yaml
apiVersion: v1
kind: Service
metadata: 
  name: causal-modeling-service-frontend
  namespace: causal-modeling
spec:
  selector:
    app: causal-modeling-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
