apps/causal-modeling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: causal-modeling-ingress
  namespace: causal-modeling
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
 tls:
    - hosts:
        - causal-modeling.nightingaleheart.com
      secretName: causal-modeling-tls
 ingressClassName: nginx
 rules:
    - host: causal-modeling.nightingaleheart.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
           service: 
             name: causal-modeling-service
             port:
               number: 3000
